<resources>
    <string name="app_name">B2School Arithmetic</string>
    <string name="enter_login">Введите логин</string>
    <string name="password">Пароль</string>
    <string name="authorize">Авторизоваться</string>
    <string name="register">Зарегистрироваться</string>
    <string name="Authorization">Войти в B2School</string>
    <string name="login">Логин</string>
    <string name="main_page_menu_title">Главная</string>
    <string name="statistic_page_menu_title">Статистика</string>
    <string name="account_page_menu_title">Аккаунт</string>
    <string name="authorization_error">Ошибка авторизации</string>
    <string name="registration_wrong_data">Некорректные данные</string>
    <string name="registration">Регистрация</string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="repeat_password">Повторить пароль</string>
    <string name="success_registration">Аккаунт успешно зарегестрирован!</string>
    <string name="field_cant_be_blank">Поле не может быть пустым</string>
    <string name="error_themes_loading">Ошибка загрузки тем</string>
    <string name="arithmetic">Арифметика</string>
    <string name="good_result">Молодец! \n Всё верно!!!</string>
    <string name="bad_result">Потренеруйся и попробуй ещё раз!</string>
    <string name="back_to_menu">Вернуться в меню</string>
    <string name="error_with_account_loading">Ошибка загрузки профиля</string>
    <string name="find_group">Найти группу</string>
    <string name="my_groups">Мои группы</string>
</resources>
